+文件注释，及待开发接口TODO